tests/snapshots/integration_test__tests__should_fail_to_mutate_non_mutable_variable.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var variable = \"test\";\n        variable = \"something else!\";\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Unable to assign to 'variable' because it is not mutable"
exit_code: 103
