tests/snapshots/integration_test__tests__should_generate_arrays_correctly.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar array = [0];\npush(array, 1);\npush(array, 2);\npush(array, 3);\nout(fmt(array));\n\"#)"
---
stdout: "[0,1,2,3]\n"
stderr: ""
error: ~
