tests/snapshots/integration_test__tests__should_not_access_outer_scopes_from_function.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar test = \"hi\";\nfunc my_function() {\n  out(test);\n}\nmy_function();\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: "Couldn't find variable with name: test."
    call_stack:
      - my_function
exit_code: 103
