tests/snapshots/integration_test__tests__should_not_allow_chaining_non_commutative_operators.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nout((1 + 2 + 3 + 4 * 10).fmt());\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: Chaining Addition with Multiplication is not supported.
    call_stack: []
exit_code: 103
