tests/snapshots/integration_test__tests__should_not_be_able_to_assign_immutable_array_to_mutable_array.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var mut array: mut [integer];\n        array = [1,2,3];\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: "Can not assign a value of type [integer] to a variable of type mut [integer]"
    call_stack: []
exit_code: 103
