tests/snapshots/integration_test__tests__should_not_be_able_to_assign_mutable_array_to_immutable_array.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var mut array: [integer];\n        array = mut [1,2,3];\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: "Can not assign a value of type mut [integer] to a variable of type [integer]"
    call_stack: []
exit_code: 103
