tests/snapshots/integration_test__tests__should_not_be_able_to_pipe_from_write.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nexec write(\"test\") => `command`;\n\"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: File must be in open mode to be used as data source
    call_stack: []
exit_code: 103
